# Rival-chess-engine

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  LearningMilestones.md  MILESTONES.md  README.md  UCI_INTEGRATION.md  count_all_games.py  create_fresh_model.py  debug_batches.py  debug_selfplay.py  extract_training_metrics.py  inspect_repetition_penalty.py  promptStart.md  requirements.txt  setup_uci.bat  setup_uci.sh  test_aggressive_selfplay.py  test_mcts_fix.py  test_pag_integration.py  test_pag_performance.py  test_pag_system.py  test_pag_tactical_training.py  test_simple_model.py
cloudflare-tunnel/: .gitignore  CLOUDFLARE_TUNNEL_SETUP.md  install-cloudflared.ps1  setup-tunnel.ps1  start-services.ps1  start-tunnel.ps1  tunnel-config.yml
engine/: Cargo.toml  README.md  requirements.txt  run_server.bat  run_server.ps1  run_server_safe.bat
engine/examples/: pag_benchmark.rs  simple_game.rs
engine/src/: board.rs  engine.rs  evaluation.rs  game.rs  game_storage.rs  lib.rs  mcts.rs  python_bridge.rs  search.rs
engine/src/bridge/: mod.rs  python.rs
engine/src/pag/: builder.rs  edge.rs  feature_extraction.rs  graph.rs  mod.rs  node.rs
engine/venvEngine/: pyvenv.cfg
engine/venvEngine/Scripts/: activate  activate.bat
engine/web/: index.html  nginx.conf  tailwind.config.js  vite.config.ts
engine/web/src/: App.tsx  index.css
engine/web/src/components/: Chessboard.tsx  CommunityGame.tsx  DonationButton.tsx  FontExplorer.tsx  GameControls.tsx  Layout.tsx  ModelStats.tsx  MoveHistory.tsx  SettingsPanel.tsx
engine/web/src/hooks/: useAnalysis.ts  useGame.ts  useGameState.ts  useTheme.ts
engine/web/src/pages/: CommunityChallenge.tsx  Home.tsx  TrainModel.tsx
engine/web/src/store/: store.ts  types.ts
engine/web/src/types/: chess.ts
engine/web/src/utils/: websocket.ts
python/: .gitignore  Cargo.toml  check_data.py  pyproject.toml  requirements.txt  setup.py
python/scripts/: analyze_games.py  archive_processed_games.py  cleanup_training_games.py  convert_pkl_to_json.py  convert_uci_games.py  create_fresh_model.py  debug_loss.py  debug_pag_raw.py  fix_high_loss.py  generate_self_play.py  integrate_experiment_games.py  migrate_to_unified_storage.py  monitor_self_play.py  pag_explainer.py  play.py  process_and_compress_experiments.py  process_experiments.bat  process_saved_games.py  rival_ai_game_processor.service  server_self_play.py  server_training.py  test_aggressive_play.py  test_self_play_manual.py  train.py  uci_tournament.py  unified_system_usage.py  view_game.py  view_pag.py  visualize_dense_pag.py  visualize_pag_board.py
python/src/: lib.rs
python/src/rival_ai/: __init__.py  analyze_games.py  board.py  chess.py  config.py  mcts.py  pag.py  self_play.py  types.py  unified_storage.py  utils.py
python/src/rival_ai/analysis/: pag_explainer.py
python/src/rival_ai/distributed/: config.py  load_balancer.py  orchestrator.py
python/src/rival_ai/distributed/game_collector/: collector.py
python/src/rival_ai/distributed/model_manager/: manager.py
python/src/rival_ai/distributed/specialization/: encoder.py  manager.py  opening_book.py  position_analyzer.py
python/src/rival_ai/distributed/training/: trainer.py
python/src/rival_ai/distributed/worker/: node.py  service.py
python/src/rival_ai/models/: __init__.py  gnn.py
python/src/rival_ai/training/: __init__.py  checkpoint.py  loss.py  losses.py  metrics.py  pag_tactical_loss.py  rust_mcts_self_play.py  self_play.py  trainer.py  training_types.py  types.py  visualization.py  visualizer.py
python/src/rival_ai/utils/: __init__.py  board_conversion.py  logging.py
python/tests/: test_data.py  test_gnn.py  test_mcts.py  test_self_play.py  test_training.py
scripts/: convert_games.py  convert_uci_games.py  train.py  uci_tournament.py
uci_tournament_results/pgn/: 20250621_181451_RivalAI_vs_Engine_0.pgn  20250621_181455_RivalAI_vs_Engine_0.pgn  20250621_181457_RivalAI_vs_Engine_0.pgn  20250621_181501_RivalAI_vs_Engine_0.pgn  20250621_181504_RivalAI_vs_Engine_0.pgn  20250621_181510_RivalAI_vs_Engine_0.pgn  20250621_181515_RivalAI_vs_Engine_0.pgn  20250621_181519_RivalAI_vs_Engine_0.pgn  20250621_181520_RivalAI_vs_Engine_0.pgn  20250621_181521_RivalAI_vs_Engine_0.pgn  20250621_181525_RivalAI_vs_Engine_0.pgn  20250621_181530_RivalAI_vs_Engine_0.pgn  20250621_181534_RivalAI_vs_Engine_0.pgn  20250621_181536_RivalAI_vs_Engine_0.pgn  20250621_181540_RivalAI_vs_Engine_0.pgn  20250621_181544_RivalAI_vs_Engine_0.pgn  20250621_181548_RivalAI_vs_Engine_0.pgn  20250621_181550_RivalAI_vs_Engine_0.pgn  20250621_181554_RivalAI_vs_Engine_0.pgn  20250621_181557_RivalAI_vs_Engine_0.pgn  20250621_181559_RivalAI_vs_Engine_0.pgn  20250621_181601_RivalAI_vs_Engine_0.pgn  20250621_181606_RivalAI_vs_Engine_0.pgn  20250621_181608_RivalAI_vs_Engine_0.pgn  20250621_181612_RivalAI_vs_Engine_0.pgn  20250621_181615_RivalAI_vs_Engine_0.pgn  20250621_181618_RivalAI_vs_Engine_0.pgn  20250621_181621_RivalAI_vs_Engine_0.pgn  20250621_181625_RivalAI_vs_Engine_0.pgn  20250621_181631_RivalAI_vs_Engine_0.pgn  20250621_181633_RivalAI_vs_Engine_0.pgn  20250621_181637_RivalAI_vs_Engine_0.pgn  20250621_181643_RivalAI_vs_Engine_0.pgn  20250621_181647_RivalAI_vs_Engine_0.pgn  20250621_181652_RivalAI_vs_Engine_0.pgn  20250621_181656_RivalAI_vs_Engine_0.pgn  20250621_181659_RivalAI_vs_Engine_0.pgn  20250621_181703_RivalAI_vs_Engine_0.pgn  20250621_181706_RivalAI_vs_Engine_0.pgn  20250621_181710_RivalAI_vs_Engine_0.pgn  (+126 more)
