[package]
name = "rival_ai_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rival_ai_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
rival_ai = { path = "../engine" }
serde_json = "1.0"
