[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rival_ai"
version = "0.1.0"
description = "A chess engine using graph neural networks"
requires-python = ">=3.8"
authors = [
    {name = "RivalAI Team"}
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "tensorboard>=2.12.0",
    "tqdm>=4.65.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["rival_ai"]
